board state rework